--- a/landing.css
+++ b/landing.css
@@ -228,15 +228,47 @@ footer {
   }
 }
 
+@media (max-width: 980px) and (min-width: 601px) {
+  footer {
+    .footer-main {
+      flex-direction: row;
+      gap: 0;
+      padding: 40px 5vw;
+    }
+
+    .footer-brand {
+      flex: 0 0 0;
+      display: none;
+    }
+
+    .footer-nav {
+      width: 100%;
+      justify-content: space-around;
+      gap: 20px;
+
+      .footer-col {
+        flex: 1;
+        text-align: left;
+      }
+    }
+  }
+}
+
 @media (max-width: 600px) {
   footer {
     .footer-main {
       padding: 40px 20px 30px;
+      flex-direction: column;
+    }
+
+    .footer-brand {
+      flex: unset;
     }
 
     .footer-nav {
       flex-direction: column;
       gap: 30px;
+      width: 100%;
     }
 
     .footer-bottom {
